# Real-TimeDeformations

./: .gitignore  CMakeLists.txt  README.md
project/: CMakeLists.txt
project/include/: CMakeLists.txt  deformationScene.hpp
project/shaders/: deformations.fs.glsl
project/src/: CMakeLists.txt  DeformationScene.cpp  main.cpp
real_time_deformations/: CMakeLists.txt
real_time_deformations/include/: CMakeLists.txt  deformationscene.hpp  environment.hpp  environment.hpp.in  handle.hpp  handlerenderer.hpp  image.hpp  imguiwrapper.hpp  pointhandle.hpp  pythagorastree.hpp
real_time_deformations/shaders/: CMakeLists.txt  deformations.fs.glsl  deformations.vs.glsl
real_time_deformations/src/: CMakeLists.txt  deformationscene.cpp  handle.cpp  handlerenderer.cpp  image.cpp  imguiwrapper.cpp  main.cpp  pointhandle.cpp  pythagorastree.cpp
